--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
-    "react": "^18.3.1",
+    "animate.css": "^4.1.1",
+    "bootstrap": "^5.3.3",
+    "ejs": "^3.1.10",
+    "express": "^4.21.0",
+    "gsap": "^3.12.5",
+    "leaflet": "^1.9.4",
     "vite-plugin-vue-layouts": "^0.11.0",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "vue-styled-components": "^1.6.0",
+    "vue3-leaflet": "^1.0.50"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
-    "@vitejs/plugin-vue-jsx": "^4.0.0",
+    "@vitejs/plugin-vue-jsx": "^4.0.1",
     "vite": "^5.3.1",
     "vite-plugin-vuetify": "^2.0.4",
     "vuetify": "^3.7.2"
