--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.0",
     "gsap": "^3.12.5",
     "leaflet": "^1.9.4",
+    "styled-components": "^6.1.13",
     "vite-plugin-vue-layouts": "^0.11.0",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3",
