--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "animate.css": "^4.1.1",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "ejs": "^3.1.10",
-    "express": "^4.21.0",
+    "express": "^4.21.1",
     "gsap": "^3.12.5",
     "leaflet": "^1.9.4",
     "styled-components": "^6.1.13",
