--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
+    "sass-embedded": "^1.79.5",
     "vite": "^5.3.1",
     "vite-plugin-vuetify": "^2.0.4",
     "vuetify": "^3.7.2"
