--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "node /backend/conection.js"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
@@ -19,6 +20,7 @@
     "gsap": "^3.12.5",
     "leaflet": "^1.9.4",
     "styled-components": "^6.1.13",
+    "typescript": "^5.6.3",
     "vite-plugin-vue-layouts": "^0.11.0",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3",
@@ -29,7 +31,7 @@
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
     "sass-embedded": "^1.79.5",
-    "vite": "^5.3.1",
+    "vite": "^5.4.9",
     "vite-plugin-vuetify": "^2.0.4",
     "vuetify": "^3.7.2"
   }
