--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "^5.6.3",
     "vite-plugin-vue-layouts": "^0.11.0",
     "vue": "^3.4.29",
+    "vue-i18n": "^10.0.4",
     "vue-router": "^4.3.3",
     "vue-styled-components": "^1.6.0",
     "vue3-leaflet": "^1.0.50"
