--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "server": "node /backend/conection.js"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@nestjs/typeorm": "^10.0.2",
     "animate.css": "^4.1.1",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
@@ -19,7 +19,9 @@
     "express": "^4.21.1",
     "gsap": "^3.12.5",
     "leaflet": "^1.9.4",
+    "mysql2": "^3.11.3",
     "styled-components": "^6.1.13",
+    "typeorm": "^0.3.20",
     "typescript": "^5.6.3",
     "vite-plugin-vue-layouts": "^0.11.0",
     "vue": "^3.4.29",
